feat: 优化Combine77